--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body style="background-color: lightblue;">
        <h1>Hello, from github pages!</h1> 
     </body>
 </html>
